--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "smtp-server": "^3.13.4",
     "svg-captcha": "^1.4.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "winston": "^3.14.2"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.5",
