change ejs to nextjs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,10 @@
   },
   "[html]": {
     "editor.defaultFormatter": "j69.ejs-beautify"
-  }
+  },
+  "lit-html.tags": [
+    "html",
+    "raw",
+    "ejs"
+  ]
 }
