--- a/ejs.settings.json
+++ b/ejs.settings.json
@@ -5,5 +5,7 @@
         "description": "BBS description",
         "keywords": "bss"
     },
-    "language": "default"
+    "editor":{
+        "emojis": "😀,😁,😂,🤣,😃,😄,😅,😆,😉,😊,😋,😎,😍,😘,🥰,😗,😙,🥲,🤩,🤔,🫡,🤨,😐,😶,😏,🙄,😣,😥,😮,🤐,😯,😪,😴,😒,😓,🤑,😤,😭,😧,😱,🥵,🤪,😵,😠,😡,🥳,🥺,🥹,🤠,🤡,🤥,🤫,🤭,🧐,💩,✨,🎉,🎊"
+    } 
 }
