--- a/package.json
+++ b/package.json
@@ -25,15 +25,19 @@
   },
   "homepage": "https://github.com/enncy/ebbs#readme",
   "dependencies": {
+    "@node-rs/jieba": "^1.10.3",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/lodash": "^4.17.7",
     "@types/node": "^22.5.1",
+    "@types/string-similarity": "^4.0.2",
     "chalk": "^4.1.2",
     "connect-mongo": "^5.1.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.1",
     "express-session": "^1.18.0",
     "glob": "^10.3.10",
     "lodash": "^4.17.21",
@@ -42,7 +46,9 @@
     "node-forge": "^1.3.1",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
+    "sharp": "^0.33.5",
     "smtp-server": "^3.13.4",
+    "string-similarity": "^4.0.4",
     "svg-captcha": "^1.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
@@ -50,6 +56,7 @@
   },
   "devDependencies": {
     "@types/ejs": "^3.1.5",
+    "@types/express-fileupload": "^1.5.1",
     "@types/mailparser": "^3.4.4",
     "@types/node-forge": "^1.3.11",
     "@types/nodemailer": "^6.4.15",
