--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express-fileupload": "^1.5.1",
     "express-session": "^1.18.0",
     "glob": "^10.3.10",
+    "ip2region": "^2.3.0",
     "lodash": "^4.17.21",
     "mailparser": "^3.7.1",
     "mongoose": "^8.6.0",
