完成论坛基本逻辑

--- a/ejs.settings.json
+++ b/ejs.settings.json
@@ -6,6 +6,9 @@
         "keywords": "bss"
     },
     "editor":{
+        "height": 1000,
+        "language": "zh_cn",
+        "simple": false,
         "emojis": "😀,😁,😂,🤣,😃,😄,😅,😆,😉,😊,😋,😎,😍,😘,🥰,😗,😙,🥲,🤩,🤔,🫡,🤨,😐,😶,😏,🙄,😣,😥,😮,🤐,😯,😪,😴,😒,😓,🤑,😤,😭,😧,😱,🥵,🤪,😵,😠,😡,🥳,🥺,🥹,🤠,🤡,🤥,🤫,🤭,🧐,💩,✨,🎉,🎊"
     } 
 }
