--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/ejs": "^3.1.5",
     "@types/express-fileupload": "^1.5.1",
     "@types/mailparser": "^3.4.4",
+    "@types/node-cron": "^3.0.11",
     "@types/node-forge": "^1.3.11",
     "@types/nodemailer": "^6.4.15",
     "@types/smtp-server": "^3.5.10",
