- 添加搜索功能 - 优化显示

--- a/ejs.settings.json
+++ b/ejs.settings.json
@@ -5,10 +5,21 @@
         "description": "BBS description",
         "keywords": "bss"
     },
-    "editor":{
+    "menus": [
+        {
+            "type": "link",
+            "text": "EBBS",
+            "href": "/"
+        }, 
+        {
+            "type": "html",
+            "content": "<a href='/admin/index'>Admin</a>"
+        }
+    ],
+    "editor": {
         "height": 1000,
         "language": "zh_cn",
         "simple": false,
         "emojis": "😀,😁,😂,🤣,😃,😄,😅,😆,😉,😊,😋,😎,😍,😘,🥰,😗,😙,🥲,🤩,🤔,🫡,🤨,😐,😶,😏,🙄,😣,😥,😮,🤐,😯,😪,😴,😒,😓,🤑,😤,😭,😧,😱,🥵,🤪,😵,😠,😡,🥳,🥺,🥹,🤠,🤡,🤥,🤫,🤭,🧐,💩,✨,🎉,🎊"
-    } 
+    }
 }
