优化手机端头部栏

--- a/ejs.settings.json
+++ b/ejs.settings.json
@@ -9,11 +9,8 @@
         {
             "type": "link",
             "text": "EBBS",
-            "href": "/"
-        }, 
-        {
-            "type": "html",
-            "content": "<a href='/admin/index'>Admin</a>"
+            "href": "/",
+            "class": ""
         }
     ],
     "editor": {
