- 添加 icon 支持 - 修复 png 无论任何404链接都返回OK的BUG

--- a/ejs.settings.json
+++ b/ejs.settings.json
@@ -3,12 +3,13 @@
     "meta": {
         "title": "BBS",
         "description": "BBS description",
-        "keywords": "bss"
+        "keywords": "bss",
+        "icon": "/public/assets/favicon.png"
     },
     "menus": [
         {
             "type": "link",
-            "text": "EBBS",
+            "text": "BBS",
             "href": "/",
             "class": ""
         }
